--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ HELP.md
 .sts4-cache
 
 /mm131pic/
+/mm131qingchun/
+/mm131xinggan/
+/mm131xiaohua/
 generatorConfig.xml
 emailConfig.properties
 application-emailConfig.properties
